--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string-array
-        name="nav_options">
+    <string-array name="nav_options">
+        <item>Map</item>
         <item>Building List</item>
         <item>Favorites</item>
-        <item>Settings</item>
     </string-array>
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
