--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
 
     <string name="title_activity_settings">Settings</string>
     <string name="pref_map_settingsTitle">Map Settings</string>
+    <string name="settings_floorplan">FloorPlan Settings</string>
 
 </resources>
